Fixed error where rendering main menu will shift sidebar children. Problem was conditional when menu is shown would render plus icon in channels not nested in a div like the other conditional

--- a/app/assets/stylesheets/sidebar/sidebar.scss
+++ b/app/assets/stylesheets/sidebar/sidebar.scss
@@ -143,6 +143,7 @@
         text-decoration: none;
         color: #bfb8be;
         display: flex;
+        width: 100%;
 
         &:hover {
           color: #f1f7f6;
@@ -154,6 +155,7 @@
           align-items: center;
           padding: 0 20px;
           height: 26px;
+          width: 100%;
 
           &:hover {
             color: #f1f7f6;
